# ddpy

./: .gitignore  README.md  ddpy.toml  ddpy.toml.example  pyproject.toml  scripts.py
contrib/ddpy.aur/: PKGBUILD
ddpy/: __init__.py  __main__.py
ddpy/cli/: __init__.py  application.py
ddpy/loaders/: __init__.py  config_loader.py  plugin_loader.py
ddpy/plugin_base/: __init__.py
ddpy/plugins/: interfacecheck.py  route53.py  webcheck.py
ddpy/plugins/interfacecheck/: __init__.py
ddpy/plugins/webcheck/: __init__.py
tests/: test_ddpy.py
units/: ddnode.service
