[tool.poetry]
name = "ddpy-core"
version = "0.1.1"
description = "Dynamic DNS client written in python"
authors = ["Joe Moubhij <josephmoubhij@gmail.com>"]
packages = [
	{ include = "ddpy" },
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
boto3 = "^1.16.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[tool.poetry.scripts]
ddpy = "ddpy.cli.application:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
